--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decentralized-code-trust",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "This project is part of the **Decentralized Trust Framework** and it aims to provide a decentralized trust for any address to trust code on Blockchain (Smart Contracts) and know wich code it trust or not",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,24 @@
   },
   "author": "Miguel Gómez Carpena",
   "license": "MIT",
+  "files": [
+    "/contracts/**/*.sol",
+    "/artifacts/contracts/*",
+    "/typechain-types/*"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MiguelLZPF/hardhat-base"
+  },
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "smart",
+    "contracts",
+    "security",
+    "decentralized",
+    "trust"
+  ],
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
