--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx hardhat test"
   },
   "author": "Miguel Gómez Carpena",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "files": [
     "/contracts/**/*.sol",
     "/artifacts/contracts/*",
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/MiguelLZPF/hardhat-base"
+    "url": "https://github.com/MiguelLZPF/decentralized-code-trust.git"
   },
   "keywords": [
     "solidity",
@@ -26,18 +26,22 @@
     "decentralized",
     "trust"
   ],
+  "bugs": {
+    "url": "https://github.com/MiguelLZPF/decentralized-code-trust/issues"
+  },
+  "homepage": "https://github.com/MiguelLZPF/decentralized-code-trust",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@types/chai": "^4.3.3",
-    "@types/node": "^18.11.5",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@types/chai": "^4.3.4",
+    "@types/node": "^18.11.9",
     "async-file": "^2.0.2",
-    "chai": "^4.3.6",
     "mocha-steps": "^1.3.0",
-    "ganache": "^7.4.4",
-    "hardhat": "^2.12.0",
+    "ganache": "^7.5.0",
+    "hardhat": "^2.12.2",
     "hardhat-contract-sizer": "^2.6.1",
     "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.24"
+    "prettier-plugin-solidity": "^1.0.0",
+    "yesno": "^0.4.0"
   }
 }
