--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -30,4 +30,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secret.NPM_PUBLISH}}
+          NODE_AUTH_TOKEN: ${{NPM_PUBLISH}}
