--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decentralized-code-trust",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "This project is part of the **Decentralized Trust Framework** and it aims to provide a decentralized trust for any address to trust code on Blockchain (Smart Contracts) and know wich code it trust or not",
   "main": "index.js",
   "scripts": {
@@ -31,17 +31,20 @@
   },
   "homepage": "https://github.com/MiguelLZPF/decentralized-code-trust",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts-upgradeable": "4.8.3",
     "@types/chai": "^4.3.4",
-    "@types/node": "^18.11.9",
-    "async-file": "^2.0.2",
+    "@types/node": "^18.15.11",
+    "chai": "^4.3.7",
+    "ganache": "^7.8.0",
+    "hardhat": "^2.14.0",
+    "hardhat-contract-sizer": "^2.8.0",
+    "json5": "^2.2.3",
     "mocha-steps": "^1.3.0",
-    "ganache": "^7.5.0",
-    "hardhat": "^2.12.2",
-    "hardhat-contract-sizer": "^2.6.1",
-    "prettier": "^2.8.0",
-    "prettier-plugin-solidity": "^1.0.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3",
+    "tsconfig-paths": "^4.2.0",
     "yesno": "^0.4.0"
   }
 }
