Update contract inheritance to use Truster instead of Trustable

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "decentralized-code-trust",
-  "version": "1.3.1",
-  "description": "This project is part of the **Decentralized Trust Framework** and it aims to provide a decentralized trust for any address to trust code on Blockchain (Smart Contracts) and know wich code it trust or not",
+  "version": "2.0.0",
+  "description": "This project is part of the Decentralized Trust Framework. It aims to provide a decentralized trust mechanism for any address to trust code on the Blockchain (Smart Contracts) and determine which code it trusts or not.",
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test"
